dirty checking. need to use event aggregator to have both text editor and form checked.

--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -80,7 +80,7 @@
                     </div>
                     <div if.bind="user.editing">
                         <div class="row" dir="rtl">
-                            <compose view-model="./member-edit" model.bind="member.member_info"></compose>
+                            <compose view-model="./member-edit" model.bind="member"></compose>
                         </div>
                     </div>
                 </div>
