--- a/src/members/member-edit.html
+++ b/src/members/member-edit.html
@@ -11,12 +11,12 @@
                         <button type="button" tabindex="-1" class="btn btn-default ${dirty ? 'disabled' : ''}" click.trigger="prev_member()" disabled.bind="dirty">
                                 <i class="fa fa-large fa-chevron-right" ></i>
                             </button>
-                        <a class="btn btn-default ${member.gender ? '' : 'btn-danger'}" href click.trigger="toggle_gender()" t="[title]members.gender">
-                                <i class="fa fa-male fa-small" if.bind="member.gender=='M' || !member.gender"></i>
-                                <i class="fa fa-female fa-small" if.bind="member.gender=='F'"></i>
+                        <a class="btn btn-default ${member.member_info.gender ? '' : 'btn-danger'}" href click.trigger="toggle_gender()" t="[title]members.gender">
+                                <i class="fa fa-male fa-small" if.bind="member.member_info.gender=='M' || !member.member_info.gender"></i>
+                                <i class="fa fa-female fa-small" if.bind="member.member_info.gender=='F'"></i>
                             </a>
-                        <a class="btn btn-default" href click.trigger="member.visible = !member.visible" title="Visibility">
-                                <i class="fa ${member.visible ? 'fa-eye' : 'fa-eye-slash'}" ></i>
+                        <a class="btn btn-default" href click.trigger="member.member_info.visible = !member.member_info.visible" title="Visibility">
+                                <i class="fa ${member.member_info.visible ? 'fa-eye' : 'fa-eye-slash'}" ></i>
                             </a>
                         <a class="btn btn-default ${dirty ? 'btn-warning' : 'disabled'}" href click.trigger="save_edited_data()" t="[title]members.save"
                             disabled.bind="clean">
@@ -34,41 +34,41 @@
                 <!--The left wing of the form-->
                 <div class="col-md-5 col-md-offset-1">
                     <div class="form-group">
-                        <input type="text" class="form-control" id="former_name" t="[placeholder]members.former-name" value.bind="member.FormerName"
+                        <input type="text" class="form-control" id="former_name" t="[placeholder]members.former-name" value.bind="member.member_info.FormerName"
                             disabled.bind="true">
                     </div>
                     <div class="form-group">
-                        <input type="text" class="form-control" id="former_first_name" t="[placeholder]members.former-first-name" value.bind="member.former_first_name">
+                        <input type="text" class="form-control" id="former_first_name" t="[placeholder]members.former-first-name" value.bind="member.member_info.former_first_name">
                     </div>
                     <div class="form-group">
-                        <input type="text" class="form-control" id="former_last_name" t="[placeholder]members.former-last-name" value.bind="member.former_last_name">
+                        <input type="text" class="form-control" id="former_last_name" t="[placeholder]members.former-last-name" value.bind="member.member_info.former_last_name">
                     </div>
                     <div class="form-group">
-                        <input type="text" class="form-control" id="birth_place" t="[placeholder]members.birth-place" value.bind="member.PlaceOfBirth">
+                        <input type="text" class="form-control" id="birth_place" t="[placeholder]members.birth-place" value.bind="member.member_info.PlaceOfBirth">
                     </div>
                     <div class="form-group">
-                        <input type="text" class="form-control" id="date_of_death" t="[placeholder]members.date-of-death" value.bind="member.date_of_death">
+                        <input type="text" class="form-control" id="date_of_death" t="[placeholder]members.date-of-death" value.bind="member.member_info.date_of_death">
                     </div>
                 </div>
                 <!--The right wing of the form-->
                 <div class="col-md-5 col-md-offset-1">
                     <div class="form-group">
-                        <input type="text" class="form-control" id="member_name" t="[placeholder]members.member-name" value.bind="member.Name" disabled.bind="true">
+                        <input type="text" class="form-control" id="member_name" t="[placeholder]members.member-name" value.bind="member.member_info.Name" disabled.bind="true">
                     </div>
                     <div class="form-group">
-                        <input type="text" class="form-control" id="first_name" t="[placeholder]members.first-name" value.bind="member.first_name">
+                        <input type="text" class="form-control" id="first_name" t="[placeholder]members.first-name" value.bind="member.member_info.first_name">
                     </div>
                     <div class="form-group">
-                        <input type="text" class="form-control" id="last_name" t="[placeholder]members.last-name" value.bind="member.last_name">
+                        <input type="text" class="form-control" id="last_name" t="[placeholder]members.last-name" value.bind="member.member_info.last_name">
                     </div>
                     <div class="form-group">
-                        <input type="text" class="form-control" id="DateOfBirth" disabled.bind="true" value.bind="member.DateOfBirth">
+                        <input type="text" class="form-control" id="DateOfBirth" disabled.bind="true" value.bind="member.member_info.DateOfBirth">
                     </div>
                     <div class="form-group">
-                        <input type="text" class="form-control" id="birth_date" t="[placeholder]members.date-of-birth" value.bind="member.birth_date">
+                        <input type="text" class="form-control" id="birth_date" t="[placeholder]members.date-of-birth" value.bind="member.member_info.birth_date">
                     </div>
                     <div class="form-group">
-                        <input type="text" class="form-control" id="nick_name" t="[placeholder]members.nick-name" value.bind="member.NickName">
+                        <input type="text" class="form-control" id="nick_name" t="[placeholder]members.nick-name" value.bind="member.member_info.NickName">
                     </div>
                 </div>
             </form>
