--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -8,8 +8,8 @@
         <div class="row slide-list">
             <div class="slide-control next" click.trigger="next_slide($event)"><i class="fa fa-chevron-right fa-3x"></i></div>
             <div class="slide-control prev" click.trigger="prev_slide($event)"><i class="fa fa-chevron-left fa-3x"></i></div>
-            <a repeat.for="image of member.images" click.trigger="photo_clicked(image)">
-                 <img class="slide-photo" src="${image.path}" style="float:right;" />
+            <a repeat.for="slide of member.slides" click.trigger="photo_clicked(slide)">
+                 <img class="slide-photo" src="${baseURL}${slide.src}" style="float:right;" />
             </a>
         </div>
         <div>
@@ -86,7 +86,7 @@
                 </div>
                 <div class="col-md-6">
 
-                    <div class="row" if.bind="!user.editing" style="padding-right: 0;">
+                    <div class="row" if.bind="!user.editing && member.story_info.story_text && member.story_info.story_text.length > 0" style="padding-right: 0;">
                         <h3>${'members.life-summary' & t}</h3>
                         <p dir="rtl" style="overflow:auto;max-height: 200px;" innerhtml.bind="member.story_info.story_text">
                         </p>
