--- a/src/members/member-picker.html
+++ b/src/members/member-picker.html
@@ -23,7 +23,7 @@
 
     <div class="member-list" style="max-width: 600px;max-height:400px;">
         <ul class="list-group">
-            <li repeat.for="member of members | filter : filter : 'full_name':'name'" class="list-group-item ${member.id === $parent.selectedId ? 'active' : ''}"
+            <li repeat.for="member of members | filter : filter : 8 :'full_name':'name'" class="list-group-item ${member.id === $parent.selectedId ? 'active' : ''}"
                 style="width:130px;float:right;min-height:166px;font-size:9px;vertical-align: text-bottom;">
 
                 <a click.trigger="select(member)" style="vertical-align: text-bottom;align-content: center;">
