--- a/src/photos/full-size-photo.html
+++ b/src/photos/full-size-photo.html
@@ -1,7 +1,11 @@
 <template>
     <div class="slide" click.trigger="mark_face($event)">
-        <div class="slide" click="mark_face($event)"> <img src="${photo_url}" /> <button class="face" repeat.for="face of faces" click.trigger=
-                "handle_face(face, $event, $index)" style.bind="face_location(face)" title.bind="face.name">            </button> </div>
+        <div class="slide" click="mark_face($event)" css="height: ${slide.height}px; width:${slide.width}px;">
+            <img src="${baseURL}${slide.src}" height="${slide.height}" width="${slide.width}" />
+            <button dir="rtl" class="face" repeat.for="face of faces" click.trigger="handle_face(face, $event, $index)" style.bind="face_location(face)"
+                title.bind="face.name">
+                            </button>
+        </div>
     </div>
     <style>
         div.slide {
@@ -22,4 +26,5 @@
             opacity: 0.5;
         }
     </style>
+
 </template>
