--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="row">
       <div class="center-block">
-        <nav class="navbar navbar-default navbar-fixed-top navbar-centered" role="navigation">
+        <nav class="navbar navbar-default navbar-fixed-top navbar-centered" role="navigation" style="width:1200px;">
           <div class="navbar-header navbar-right" style="margin-left: 40px;">
             <a class="navbar-brand" href="#">
               <span>
