--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -96,10 +96,7 @@
                         <froala-editor value.two-way="member.story_info.story_text" config.bind="{
                             toolbarButtons: ['undo', 'redo', '|', 'bold', 'italic', 'underline', '|', 'insertLink', 'insertImage', 'insertVideo', '|',
                                  'emoticons', 'color', 'fontSize', 'html'],
-                                 language: 'he'
-                                      }" event-handlers.bind="{
-        'contentChanged ': notify_change
-    }">
+                                 language: 'he'}">
                         </froala-editor>
                     </div>
                 </div>
