--- a/src/members/member-edit.html
+++ b/src/members/member-edit.html
@@ -40,7 +40,7 @@
                             t="[title]members.cancel" disabled.bind="! dirty">
                                 <i class="fa  fa-large fa-rotate-left"></i>
                             </button>
-                        <button type="button" type="button" class="btn btn-warning" click.trigger="try_delete()"
+                        <button if.bind="this.user.privileges.ADMIN" type="button" type="button" class="btn btn-warning" click.trigger="try_delete()"
                             t="[title]members.delete-member" disabled.bind="dirty">
                                 <i class="fa fa-large fa-trash"></i>
                             </button>
