--- a/src/members/member-edit.html
+++ b/src/members/member-edit.html
@@ -17,10 +17,10 @@
             <div class="row toolbar">
                 <div class="col-md-12" style="padding-right:0px">
                     <div class="btn-group" style="margin-bottom:15px;">
-                        <button type="button" tabindex="-1" class="btn btn-default ${dirty ? 'disabled' : ''}" click.trigger="next_member()" disabled.bind="dirty">
+                        <button type="button" tabindex="-1" class="btn btn-default ${dirty_story || dirty_info ? 'disabled' : ''}" click.trigger="next_member()">
                                 <i class="fa fa-large fa-chevron-left" ></i>
                             </button>
-                        <button type="button" tabindex="-1" class="btn btn-default ${dirty ? 'disabled' : ''}" click.trigger="prev_member()" disabled.bind="dirty">
+                        <button type="button" tabindex="-1" class="btn btn-default ${dirty_story || dirty_info ? 'disabled' : ''}" click.trigger="prev_member()">
                                 <i class="fa fa-large fa-chevron-right" ></i>
                             </button>
                         <button type="button" class="btn btn-default ${member.member_info.gender ? '' : 'btn-danger'}" href click.trigger="toggle_gender()"
@@ -32,16 +32,16 @@
                             title="Visibility">
                                 <i class="fa ${member.member_info.visible ? 'fa-eye' : 'fa-eye-slash'}" ></i>
                             </button>
-                        <button class="btn btn-default ${dirty ? 'btn-warning' : 'disabled'}" type="button" type="button" class="btn btn-default" click.trigger="save_edited_data()"
-                            t="[title]members.save" disabled.bind="! dirty">
+                        <button class="btn btn-default ${dirty_story || dirty_info ? 'btn-warning' : 'disabled'}" type="button" type="button" class="btn btn-default" click.trigger="save_edited_data()"
+                            t="[title]members.save">
                                 <i class="fa  fa-large fa-save"></i>
                             </button>
-                        <button type="button" type="button" class="btn btn-default" click.trigger="cancel_edit_mode()"
-                            t="[title]members.cancel" disabled.bind="! dirty">
+                        <button type="button" type="button" class="btn btn-default ${dirty_story || dirty_info ? 'btn-warning' : 'disabled'}" click.trigger="cancel_edit_mode()"
+                            t="[title]members.cancel" >
                                 <i class="fa  fa-large fa-rotate-left"></i>
                             </button>
-                        <button if.bind="this.user.privileges.ADMIN" type="button" type="button" class="btn btn-warning" click.trigger="try_delete()"
-                            t="[title]members.delete-member" disabled.bind="dirty">
+                        <button if.bind="this.user.privileges.ADMIN" type="button" type="button" class="btn btn-warning ${dirty_story || dirty_info ? 'disabled' : btn-warning'}" click.trigger="try_delete()"
+                            t="[title]members.delete-member">
                                 <i class="fa fa-large fa-trash"></i>
                             </button>
                     </div>
