--- a/src/members/member-picker.html
+++ b/src/members/member-picker.html
@@ -34,7 +34,7 @@
                 style="width:130px;float:right;min-height:166px;font-size:9px;vertical-align: text-bottom;">
 
                 <a click.trigger="select(member)" style="vertical-align: text-bottom;align-content: center;">
-                    <img style="width:100px;height:100px;" src.bind="member.facePhotoURL" />
+                    <img style="width:100px;height:100px;border-radius:50%;" src.bind="member.facePhotoURL" />
                         <h6 dir="rtl" class="list-group-item-heading" style="text-align: center;">${member.name}</h6>
                     </a>
             </li>
