--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://use.fontawesome.com/44d9dd0a37.js"></script>
   <link href="node_modules\froala-editor\css\froala_editor.pkgd.min.css" rel="stylesheet" type="text/css" /> link href="node_modules\froala-editor\css\froala_style.min.css" rel="stylesheet" type="text/css" />
+  <script id="fr-fek">try{(function (k){localStorage.FEK=k;t=document.getElementById('fr-fek');t.parentNode.removeChild(t);})('QwsagB-22gE-13rkG2uiB-22==')}catch(e){}</script>
 </head>
 
 <body aurelia-app="main">
