--- a/src/members/members.html
+++ b/src/members/members.html
@@ -5,13 +5,13 @@
             <h1 dir="rtl"> ${"members.members" | t}</h1>
 
             <div class="row" style="margin-bottom:20px">
+                <div class="col-md-1" if.bind="! user.editing"></div>
+                <div class="col-md-6"></div>
                 <div class="col-md-1" if.bind="user.editing">
-                    <a route-href="route: member-creation" class="btn btn-primary cl-create-btn">
+                    <a route-href="route: member-creation" class="btn btn-success cl-create-btn">
                     <i class="fa fa-plus-square-o"></i> ${'members.new' & t}
                 </a>
                 </div>
-                <div class="col-md-1" if.bind="! user.editing"></div>
-                <div class="col-md-6"></div>
                 <div class="col-md-5">
                     <div class="input-group" style="width:100%">
                         <input dir="rtl" type="text" class="form-control" t="[placeholder]members.filter" value.bind="filter & debounce">
