--- a/src/home/home.html
+++ b/src/home/home.html
@@ -1,8 +1,8 @@
 <template>
     <br/><br/><br/><br/><br/>
     <h1>Home</h1>
-    <dir class="row content-area" style="min-height:800px">
+    <dir class="row content-area">
     </dir>
-    <dir class="row footer-area" style="min-height:200px">
+    <dir class="row footer-area">
     </dir>
 </template>
