--- a/src/members/member-edit.html
+++ b/src/members/member-edit.html
@@ -6,10 +6,10 @@
         <div class="col-md-6 family-chains">
             <div class="row">
                 <div class="col-md-6">
-                    <a type="button" class="btn btn-default" style="width:100%;" click.trigger="find_father()">${'members.father' | t}</a>
+                    <a type="button" class="btn btn-default" style="height:32px;padding-top:2px;font-size:16px;" click.trigger="find_father()">${'members.father' | t}</a>
                 </div>
                 <div class="col-md-6" style="padding-right:0px;">
-                    <a type="button" class="btn btn-default" style="width:100%;" click.trigger="find_mother()">${'members.mother' | t}</a>
+                    <a type="button" class="btn btn-default" style="height:32px;padding-top:2px;font-size:16px;" click.trigger="find_mother()">${'members.mother' | t}</a>
                 </div>
             </div>
         </div>
