--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -111,7 +111,7 @@
                 </div>
             </div>
         </div>
-        <div class=navbar-fixed-bottom navbar navbar-default " style="min-height:100px; ">
+        <div if.bind="! user.editing" class=navbar-fixed-bottom navbar navbar-default " style="min-height:100px; ">
             <div class="footer-area "></div>
         </div>
     </div>
