--- a/src/members/members.html
+++ b/src/members/members.html
@@ -8,7 +8,7 @@
                 <div class="col-md-1" if.bind="! user.editing"></div>
                 <div class="col-md-6"></div>
                 <div class="col-md-1" if.bind="user.editing">
-                    <a route-href="route: member-details; params.bind={id:0}" class="btn btn-success cl-create-btn">
+                    <a route-href="route: member-details; params.bind: {id:'new'}" class="btn btn-success cl-create-btn">
                     <i class="fa fa-plus-square-o"></i> ${'members.new' & t}
                 </a>
                 </div>
@@ -31,8 +31,8 @@
                         style="width:130px;float:right;min-height:166px;font-size:9px;vertical-align: text-bottom;">
 
                         <a route-href="route: member-details; params.bind: {id:member.id}" style="vertical-align: text-bottom;align-content: center;border:none;">
-                    <img style="width:100px;height:100px;border-radius:50%;" src.bind="member.facePhotoURL" />
-                        <h6 dir="rtl" class="list-group-item-heading" style="text-align: center;">${member.name}</h6>
+                            <img style="width:100px;height:100px;border-radius:50%;" src.bind="member.facePhotoURL" />
+                            <h6 dir="rtl" class="list-group-item-heading" style="text-align: center;">${member.name}</h6>
                     </a>
                     </li>
                 </ul>
