--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -2,7 +2,7 @@
     <div style="margin-top:50px">
         <div class="row" style="background-color:lightgrey;padding:10px;">
             <h3 dir="rtl" style="float: right;margin:0px;">
-                ${member.member_info.full_name}
+                ${member.member_info.full_name & t}
             </h3>
         </div>
         <div class="row slide-list">
